<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:targetApi="o">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="50dp"
        android:outlineAmbientShadowColor="@color/black"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="center"
                android:src="@drawable/room_pic" />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/room_type"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Deluxe Twin Bed Private Room (ensuite)"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rs.1999\n/night"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:layout_marginTop="5dp"
                android:padding="5dp"/>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:layout_gravity="center_vertical"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="x 2"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"/>
            </LinearLayout>
            <TextView
                android:id="@+id/room_type_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Deluxe Twin Bed Private Room (ensuite) with 2 single bed"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:fadeScrollbars="true"
                android:scrollbarFadeDuration="0">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_locker"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/locker"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ac"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/a_c_available" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bed"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/extra_bed_on_n_request"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_credit_card"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/card_payment_naccpeted"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_blanket"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/linen_included"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_breakfast"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/breakfast"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dining"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/dining_facility"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_game"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/gaming_activities"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_hangout"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/hangout_area"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_hot_water"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/warm_water"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lamp"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/bedside_lamp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_laundry"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/laundry_extra"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_reception"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/_24_7_reception"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_shower"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/shower"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_storage"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/extra_storage_n_facility" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wifi"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/free_wifi"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tv"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:tooltipText="@string/common_television"/>

            </LinearLayout>
            </HorizontalScrollView>
            <Button
                android:id="@+id/room_book_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Book"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        
    </androidx.cardview.widget.CardView>
</LinearLayout>