<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dialog_container">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/primaryColor">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_warning" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/warning_message"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="@id/buttonOk"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:background="@color/primaryColor"
                android:text="@string/ok"
                android:textColor="@color/primaryTextColor" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="@id/buttonOk"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:background="@color/primaryColor"
                android:text="@string/cancel"
                android:textColor="@color/primaryTextColor" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>